--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -6,12 +6,17 @@
 
 .logo-right{
 	width:250px;
-	float:left;
 	color:#017560;
+	float:left;
 }
 
 h2{
 	color:#017560;
+}
+
+.header{
+	width:315px;
+	padding-bottom:15px;
 }
 	
 .clear{
@@ -20,12 +25,9 @@ h2{
 
 #beaver{
 	width:50px;
-	float:left;
 }
 
 #email{
-    	clear:both;
-	float:left;
 	width:300px;
 }
 
@@ -41,15 +43,26 @@ h2{
 	background-color:#017560;
 }
 
-.form-holder-1{
-	float:left;
-	clear:both;
-	padding-right:47px;
+.forms{
+	width:100%;
 }
 
-.form-holder-2{
-    float:left;
-    padding-left:50px;
-    border-left:1px solid #e1e1e1;
+
+@media screen and (min-width: 768px){
+	.form-holder-2{
+		padding-left:50px;
+		border-left:1px solid #e1e1e1;
+		float:left;
+		position:relative;
+	}
+	.form-holder-1{
+		padding-right:47px;
+		float:left;
+		position:relative;
+	}
+}
+
+.form-holder-3{
+	clear:both;
 }
 
