--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -2,6 +2,7 @@
 	width:940px;
 	min-height:100%;
 	margin-top:20px;
+	padding:0 20px;
 }
 
 .logo-right{
@@ -42,13 +43,22 @@ h2{
 .dark-green{
 	background-color:#017560;
 }
+.dark-green:hover{
+	background-color:#128d75;
+}
 
 .forms{
 	width:100%;
 }
 
+.subway-icon{
+}
+
 
 @media screen and (min-width: 768px){
+	.container{
+		padding: 0 30px;
+	}
 	.form-holder-2{
 		padding-left:50px;
 		border-left:1px solid #e1e1e1;
