--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -7,63 +7,74 @@
   width: 940px;
   min-height: 100%;
   margin-top: 20px;
+  padding: 0 20px;
 }
 
-/* line 7, ../sass/partials/_layout.scss */
+/* line 8, ../sass/partials/_layout.scss */
 .logo-right {
   width: 250px;
   color: #017560;
   float: left;
 }
 
-/* line 13, ../sass/partials/_layout.scss */
+/* line 14, ../sass/partials/_layout.scss */
 h2 {
   color: #017560;
 }
 
-/* line 17, ../sass/partials/_layout.scss */
+/* line 18, ../sass/partials/_layout.scss */
 .header {
   width: 315px;
   padding-bottom: 15px;
 }
 
-/* line 22, ../sass/partials/_layout.scss */
+/* line 23, ../sass/partials/_layout.scss */
 .clear {
   clear: both;
 }
 
-/* line 26, ../sass/partials/_layout.scss */
+/* line 27, ../sass/partials/_layout.scss */
 #beaver {
   width: 50px;
 }
 
-/* line 30, ../sass/partials/_layout.scss */
+/* line 31, ../sass/partials/_layout.scss */
 #email {
   width: 300px;
 }
 
-/* line 34, ../sass/partials/_layout.scss */
+/* line 35, ../sass/partials/_layout.scss */
 .form-holder {
   width: 300px;
 }
 
-/* line 38, ../sass/partials/_layout.scss */
+/* line 39, ../sass/partials/_layout.scss */
 .pad-10 {
   padding-bottom: 10px;
 }
 
-/* line 42, ../sass/partials/_layout.scss */
+/* line 43, ../sass/partials/_layout.scss */
 .dark-green {
   background-color: #017560;
 }
 
 /* line 46, ../sass/partials/_layout.scss */
+.dark-green:hover {
+  background-color: #128d75;
+}
+
+/* line 50, ../sass/partials/_layout.scss */
 .forms {
   width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  /* line 52, ../sass/partials/_layout.scss */
+  /* line 59, ../sass/partials/_layout.scss */
+  .container {
+    padding: 0 30px;
+  }
+
+  /* line 62, ../sass/partials/_layout.scss */
   .form-holder-2 {
     padding-left: 50px;
     border-left: 1px solid #e1e1e1;
@@ -71,14 +82,14 @@ h2 {
     position: relative;
   }
 
-  /* line 58, ../sass/partials/_layout.scss */
+  /* line 68, ../sass/partials/_layout.scss */
   .form-holder-1 {
     padding-right: 47px;
     float: left;
     position: relative;
   }
 }
-/* line 65, ../sass/partials/_layout.scss */
+/* line 75, ../sass/partials/_layout.scss */
 .form-holder-3 {
   clear: both;
 }
